# bookscrapper

./: .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  pyproject.toml
src/: main.py
src/api/: app.py  auth.py  rate_limit.py
src/api/routes/: books.py  changes.py
src/api/services/: books_service.py
src/crawler/: crawler.py
src/database/: db.py  models.py
src/scheduler/: scheduler.py
src/tests/: test_books_service.py
src/utils/: helpers.py  tag_parsers.py  urls.py
