[project]
name = "bookscrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "fastapi-cli>=0.0.16",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
